Modified Architecture to simplify controlling using python code

--- a/test/boolParam.conf
+++ b/test/boolParam.conf
@@ -1,5 +1,5 @@
-AutoGain
-LUTEnable
-WB_Enable
-WB_Hold
-HDREnable
+AutoGain false
+LUTEnable false
+WB_Enable false
+WB_Hold false
+HDREnable false
