--- a/test/enumParam.conf
+++ b/test/enumParam.conf
@@ -1,7 +1,7 @@
-PixelFormat
-SubSample
-AcquisitionMode
-TriggerSelector
-TriggerMode
-TriggerSource
-BufferMode
+PixelFormat = 1
+SubSample = 2
+AcquisitionMode = 3
+TriggerSelector = 4
+TriggerMode = 5
+TriggerSource = 6
+BufferMode = 7
