--- a/test/uint32Param.conf
+++ b/test/uint32Param.conf
@@ -1,13 +1,13 @@
-Width
-Height
-OffsetX
-OffsetY
-Exposure
-FrameRate
-Gain
-GevSCPSPacketSize
-AutoGainSet
-AutoGainIGain
-WB_R_GAIN_Value
-WB_GR_GAIN_Value
-WB_B_GAIN_Value
+Width=1
+Height=2
+OffsetX=3
+OffsetY=4
+Exposure=5
+FrameRate=6
+Gain=7
+GevSCPSPacketSize=8
+AutoGainSet=9
+AutoGainIGain=10
+WB_R_GAIN_Value=11
+WB_GR_GAIN_Value=12
+WB_B_GAIN_Value=13
